historia de usuario #9 front, correccion de fuente

--- a/src/assets/css/Marcador.css
+++ b/src/assets/css/Marcador.css
@@ -1,6 +1,6 @@
 body {
     background: #d5d5d5;
-    font-family: arial;
+    font-family: Arial;
     color: #FAFAFA;
     text-transform: uppercase;
 }
